--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     <style name="TextView.Interest" parent="TextView">
         <item name="android:background">@drawable/round_textview</item>
         <item name="android:layout_margin">3dp</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -31,8 +31,13 @@
     <style name="LinearLayout.Interests">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_marginTop">14dp</item>
-        <item name="android:layout_marginLeft">14dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">8dp</item>
         <item name="android:orientation">horizontal</item>
     </style>
+
+    <color name="white">#fff</color>
+    <color name="selectable_pressed">#1e000000</color>
+    <color name="selectable_ripple">#27000000</color>
+
 </resources>
